Added total amount to group endpoints
Added this info to the chart
