# backend/Fms/Entities/Grouped/TransactionGroupedByCategory.cs
@@ -9,3 +9,11 @@ public class TransactionGroupedByCategory
     [Required]
     public required int Amount { get; set; }
 }
+
+public class TransactionGroupedByCategoryList
+{
+    [Required]
+    public required int TotalAmount { get; set; }
+    [Required]
+    public required List<TransactionGroupedByCategory> Items { get; set; }
+}
