# backend/Fms/Entities/Grouped/TransactionGroupedByUser.cs
@@ -10,3 +10,11 @@ public class TransactionGroupedByUser
     [Required]
     public int Amount { get; set; }
 }
+
+public class TransactionGroupedByUserList
+{
+    [Required]
+    public required int TotalAmount { get; set; }
+    [Required]
+    public required List<TransactionGroupedByUser> Items { get; set; }
+}
